# nanousd

./: .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  DESIGN_NOTES.md  example01.cpp  justfile  nanousd-array.h  nanousd-arrays.h  nanousd-camera.h  nanousd-cameras.h  nanousd-iterator.h  nanousd-iterators.h  nanousd-material.h  nanousd-materials.h  nanousd-mesh.cpp  nanousd-mesh.h  nanousd-prim.cpp  nanousd-properties.h  nanousd-property.cpp  nanousd-types.h  nanousd.cpp  nanousd.h  pyproject.toml  test01.usda
.github/workflows/: build.yml
libnanousd/: CMakeLists.txt  example01.cpp  nanousd-array.cpp  nanousd-iterator.h  nanousd-light.cpp  nanousd-light.h  nanousd-material.h  nanousd-mesh.cpp  nanousd-mesh.h  nanousd-prim.cpp  nanousd-prim.h  nanousd-property.cpp  nanousd-property.h  nanousd-types.h  nanousd.cpp  nanousd.h
libnanousd/tests/: CMakeLists.txt  nusd_test-camera.cpp  nusd_test-light.cpp  nusd_test-material.cpp  nusd_test-mesh.cpp  nusd_test-prim.cpp  nusd_test-property.cpp  nusd_test.cpp
nanousd/: __init__.py
python/: CLAUDE.md  example01.py  pyproject.toml  test_shader_input_value.usda
python/docs/: Doxyfile.in  conf.py  index.rst
python/nanousd/: __init__.py  _get_property.py  _set_property.py  array.py  ffi.py  tokens.py
python/tests/: test_color_space.py  test_light.py  test_material_functions.py  test_mesh.py  test_nanousd.py  test_primvars.py  test_shader_connect.py  test_string.py
tests/: nusd_test.cpp  test.py
