[project]
name = "nanousd"
version = "0.1.0"
description = "C library with ctypes-based Python wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ctypesgen",
    "numpy>=2.2.6",
]

[tool.uv]
managed = true  # Let uv handle environment and locking

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
